--- a/main.css
+++ b/main.css
@@ -261,7 +261,6 @@ align-items:center;
 justify-content: center;
 }
 .contact__container {
-          
     width: 900px;
     height: 290px;
    display: flex;
@@ -277,7 +276,7 @@ align-items:center;
     font-weight: 700;
     font-family: "Lato";
     text-align: center;
-    }
+}
     .contact__container--text {
         margin-top: 60px;
         width: 540px;
@@ -287,7 +286,7 @@ color: #3c3c3c;
 font-weight: 300;
 font-family: "Lato";
 text-align: center;
-    }
+}
     .contact--button {
         margin-top: 40px;
         width: 400px;
@@ -299,5 +298,18 @@ color: #ffffff;
 font-weight: 400;
 font-family: "Lato";
 text-align: center;
-    }  
-    
+}  
+    .contact--footer  {
+        margin-top: 60px;
+        width: 316px;
+        height: 40px;
+        border: 2px solid red;
+        font-size: 14px;
+color: #3c3c3c;
+font-weight: 400;
+font-family: "Lato";
+display: flex;
+align-self: center;
+align-items:center;
+justify-content:space-between;
+}
